--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,15 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => "#{(@sortBy == 'title')?'hilite':''}"}
+        = link_to 'Movie Title', |
+        movies_path(:sortBy => :title), |
+        :id => 'title_header'
       %th Rating
-      %th Release Date
+      %th{:class => "#{(@sortBy == 'release_date')?'hilite':''}"}
+        = link_to 'Release Date', |
+        movies_path(:sortBy => :release_date), |
+        :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
