HW-2-2 first pass

--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,17 +1,24 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :method => :get do
+  Include: 
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", "1", @ratings_shown.include?(rating), :id => "ratings_#{rating}"
+  = submit_tag 'Refresh', :id => "ratings_submit"
+
 %table#movies
   %thead
     %tr
       %th{:class => "#{(@sortBy == 'title')?'hilite':''}"}
         = link_to 'Movie Title', |
-        movies_path(:sortBy => :title), |
+        movies_path(:sortBy => :title, :ratings => @ratings_shown), |
         :id => 'title_header'
       %th Rating
       %th{:class => "#{(@sortBy == 'release_date')?'hilite':''}"}
         = link_to 'Release Date', |
-        movies_path(:sortBy => :release_date), |
+        movies_path(:sortBy => :release_date, :ratings => @ratings_shown), |
         :id => 'release_date_header'
       %th More Info
   %tbody
